# Voice-Assistant-Chatbot

./: .gitignore  README.md  config.json  main.py  model_client.py  pyproject.toml  setup.cfg  speech_to_text.py  text_to_speech.py
voice_assistant/: __init__.py  model_client.py  speech_to_text.py  text_to_speech.py
