[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice_assistant"
version = "0.1.0"
description = "Lightweight local voice assistant utilities (Model client, STT, TTS)"
authors = [ { name = "User", email = "user@example.com" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "SpeechRecognition>=3.8.1"
]
keywords = ["voice", "assistant", "speech", "ollama"]
